--- a/week 6/index.html
+++ b/week 6/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     
-    <h2>JavaScript Interactive Elements</h2>
+    <h2> Interactive Elements</h2>
     
     <!-- Toggle Text -->
     <p id="text">This text can be toggled.</p>
